samples/_failures_safe/1761354825_e00df7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d9cdc3d.c: In function ‘main’:
./samples/SAFE/__tmp_5d9cdc3d.c:170:16: error: missing terminating " character
  170 |         printf(", Value
      |                ^~~~~~~~
./samples/SAFE/__tmp_5d9cdc3d.c:170:9: error: expected expression at end of input
  170 |         printf(", Value
      |         ^~~~~~
./samples/SAFE/__tmp_5d9cdc3d.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d9cdc3d.c:170:9: error: expected declaration or statement at end of input
